--- a/Radio/templates/loadavg.html
+++ b/Radio/templates/loadavg.html
@@ -2,6 +2,7 @@
     <table>
         <tr><th>Status:</th><td>{{ button_on_off }}</td></tr>
       <tr><th>Stream:</th><td>{{ stream }}</td></tr>
+        <tr><th>Radio name:</th><td>{{ radio_name }}</td></tr>
       <tr><th>Volume:</th><td>{{ volume }}</td></tr>
       <tr><th>Button Lang:</th><td>{{ button_lang }}</td></tr>
         <tr><th>Button Mittel:</th><td>{{ button_mittel }}</td></tr>
