send web control state to db

--- a/Radio/templates/base.html
+++ b/Radio/templates/base.html
@@ -21,7 +21,7 @@
                 </nav>
             <div>
             <label class="toggle">
-              <input type="checkbox">
+              <input type="checkbox" onclick="sendWebControlValue(this)">
               <span class="slider"></span>
             </label>
             <td>web control</td>
