--- a/Radio/static/base.css
+++ b/Radio/static/base.css
@@ -15,23 +15,68 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 }
+
+/* ---------------- buttons ------------------------------ */
 .button_on {
     position: absolute;
     float:left;
 }
+
 .button_off {
     position: relative;
     float:left;
 }
+
 #buttonContainer {
     border:2px;
 	position: relative;
 	left: 380px;
+	top: 190px;
 }
+
+// TODO: Only add pointer when webcontrol active
+.button_on:hover {
+    cursor: pointer;
+}
+
+.button_off:hover {
+    cursor: pointer;
+}
+
 #redLine {
     position: relative;
     margin-left: 350px;
 }
+
+
+/* ------------ radio slider ---------------------------- */
+.sliderRadioContainer {
+    position: relative;
+    margin-left: 350px;
+    top: 150px;
+
+}
+#sliderRadio {
+    width: 560px;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  cursor: pointer;
+  width: 15rem;
+}
+input[type="range"]::-webkit-slider-thumb {
+   -webkit-appearance: none;
+   appearance: none;
+   margin-top: -80px;
+   background-color: #ff0000;
+   height: 200px;
+   width: 8px;
+}
+
+/* ---- end ----- */
 
 #radio {
     position: absolute;
@@ -71,4 +116,8 @@ header li {
 header li a {
     color: black;
     text-decoration: none;
+}
+
+#labelWebControl {
+    left:500px;
 }
