--- a/Radio/static/toggleSwitch.css
+++ b/Radio/static/toggleSwitch.css
@@ -1,4 +1,5 @@
 /* styling lable */
+
 .toggle {
     --width: 60px;
     --height: calc(var(--width) / 3);
@@ -10,6 +11,7 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
     border-radius: var(--height);
     cursor: pointer;
+    left:200px;
 }
 
 /* hiding checkbox */
@@ -47,4 +49,8 @@
 }
 .toggle input:checked + .slider::before {
     transform: translateX(calc(var(--width) - var(--height)));
+}
+
+#webControlToggleContainer {
+    left: 400px;
 }
