--- a/Radio/templates/base.html
+++ b/Radio/templates/base.html
@@ -32,8 +32,8 @@
             <div id="radioContainer">
                 <img src="{{ url_for('static', filename='/radioFront2.png') }}" alt="radio status" id="radio">
                 <div class="sliderRadioContainer">
-                  <input type="range" min="19550" max="21100" value="19550" class="slider" id="sliderRadio"
-                         oninput="sendPosValue(this.value)">
+                  <input type="range" min="19550" max="21100" value="19550" class="slider"
+                         id="sliderRadio" oninput="sendPosValue(this.value)">
                 </div>
 
                 <div id="buttonContainer">
