--- a/Radio/templates/base.html
+++ b/Radio/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.7.1.min.js"></script>
 <script src="{{ url_for('static', filename='/functions.js') }}"></script>
+<script src="{{ url_for('static', filename='/input-knobs.js') }}"></script>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <link href="{{ url_for('static', filename='/base.css') }}" rel="stylesheet">
         <link href="{{ url_for('static', filename='/toggleSwitch.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='/input-knob.css') }}" rel="stylesheet">
         <title >PiRadio</title>
 
         {{ turbo() }}
@@ -34,6 +36,10 @@
                 <div class="sliderRadioContainer">
                   <input type="range" min="19550" max="21100" value="19550" class="slider"
                          id="sliderRadio" oninput="sendPosValue(this.value)">
+                </div>
+                <div>
+                    <input type="range" class="input-knob" data-diameter="120" id="volumeKnob" data-bgcolor = "#ffffff"
+                    onchange="sendVolume(this)" disabled="true"/>
                 </div>
 
                 <div id="buttonContainer">
