--- a/Radio/react-app/src/components/Pages/Frequencies.css
+++ b/Radio/react-app/src/components/Pages/Frequencies.css
@@ -20,6 +20,19 @@
     margin: 10px;
 }
 
+.attention {
+  animation: attentionEffect 0.5s infinite alternate;
+}
+
+@keyframes attentionEffect {
+  0% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1.1);
+  }
+}
+
 img {
     width: 25px;
     height: 25px;
