--- a/Radio/react-app/src/components/Pages/RadioControl/Basic.css
+++ b/Radio/react-app/src/components/Pages/RadioControl/Basic.css
@@ -2,25 +2,32 @@
     border: 1px solid red
 }
 
-.buttons {
+.basic {
     display: flex;
-    justify-content: space-between; /* This will spread the sections across the full width */
+    justify-content: space-between;
+    /* This will spread the sections across the full width */
     align-items: center;
     margin-left: 10vw;
     margin-right: 20vw;
-    width: 60%; /* Adjust width to fill the space after margins */
+    width: 60%;
+    /* Adjust width to fill the space after margins */
     gap: 5vw;
 }
 
 .Equalizer {
-    display: flex; /* Use flexbox to layout children */
-    flex-direction: row; /* Align children horizontally */
-    align-items: center; /* Center-align items vertically */
-    justify-content: space-around; /* Distribute space evenly around items */
+    display: flex;
+    /* Use flexbox to layout children */
+    flex-direction: row;
+    /* Align children horizontally */
+    align-items: center;
+    /* Center-align items vertically */
+    justify-content: space-around;
+    /* Distribute space evenly around items */
 }
 
 .Equalizer label {
-    margin: 0 10px; /* Adds space between each label */
+    margin: 0 10px;
+    /* Adds space between each label */
 }
 
 .Volume {
