--- a/Radio/react-app/src/components/Pages/Settings/Potentiometer.css
+++ b/Radio/react-app/src/components/Pages/Settings/Potentiometer.css
@@ -1,14 +1,19 @@
-input:not([type='checkbox']), label {
-    display:block;
+input:not([type='checkbox']),
+label {
+    display: block;
 }
 
-h3, .formulaLabel, .pinLabel {
+h3,
+.formulaLabel,
+.pinLabel {
     display: inline-block;
 }
+
 #minimum #maximum {
     width: 80px;
 }
-#pin  {
+
+#pin {
     width: 30px;
     float: right;
     margin-right: 20%;
@@ -17,4 +22,43 @@ h3, .formulaLabel, .pinLabel {
 #formula {
     float: right;
     margin-right: 20%;
+}
+
+.dropdown {
+    position: relative;
+}
+
+.menu {
+    position: absolute;
+
+    list-style-type: none;
+    margin: 5px 0;
+    padding: 0;
+
+    border: 1px solid grey;
+    width: 150px;
+}
+
+.menu>li {
+    margin: 0;
+
+    background-color: white;
+}
+
+.menu>li:hover {
+    background-color: lightgray;
+}
+
+.menu>li>button {
+    width: 100%;
+    height: 100%;
+    text-align: left;
+
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 5px;
+    margin: 0;
+    font: inherit;
+    cursor: pointer;
 }
