--- a/Radio/react-app/src/components/Pages/Settings/Button.css
+++ b/Radio/react-app/src/components/Pages/Settings/Button.css
@@ -58,8 +58,18 @@ input[type=number] {
     min-width: 45px !important;
 }
 
+.Actions {
+    width: fit-content;
+    margin: 2%;
+}
+
 .Action {
-    border: solid black 1px;
+    margin: 2%;
+    border: 5%;
+    display: 'flex';
+    flex-direction: 'column';
+    align-items: 'flex-start';
+    padding-right: 10px;
 }
 
 .saveSuccess {
